--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -16,8 +16,8 @@
 .navbar__list {
   display: flex;
   gap: 2rem;
-  font-size: 1.5rem;
-  font-family: $main-font;
+  font-size: 1.2rem;
+  font-family: $body-font;
 
   text-transform: uppercase;
   list-style: none;
