--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,11 +3,12 @@
 $black: #333333;
 $beige: #f7f6f3;
 $white: #fff;
+$yellow: #ffdc8a;
 
 // ************FONTS********************
 // ***************************************
-$main-font: 'Open Sans', sans-serif;
-// $body-font: "Barlow", sans-serif;
+$main-font: 'Crimson Text', serif;
+$body-font: 'Work Sans', sans-serif;
 
 $regular: 400;
 $medium: 500;
