--- a/styles/style.css
+++ b/styles/style.css
@@ -297,6 +297,65 @@ body {
   width: 70%;
 }
 
+.title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.title--style {
+  width: 11rem;
+  height: 1.4rem;
+  border-bottom: 3.5px solid #ffdc8a;
+}
+
+/***********************/
+/* Hero Section */
+/***********************/
+.hero__textContainer h1 {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
+  font-size: 3.5rem;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(94, 114, 235)), color-stop(56%, rgb(255, 145, 144)), to(rgb(254, 193, 149)));
+  background-image: linear-gradient(90deg, rgb(94, 114, 235) 0%, rgb(255, 145, 144) 56%, rgb(254, 193, 149) 100%);
+  color: transparent;
+  -webkit-background-clip: text;
+  -webkit-animation: move 4s infinite;
+          animation: move 4s infinite;
+}
+@-webkit-keyframes move {
+  50% {
+    background-image: linear-gradient(262deg, rgb(94, 114, 235) 0%, rgb(255, 145, 144) 56%, rgb(254, 193, 149) 100%);
+  }
+}
+@keyframes move {
+  50% {
+    background-image: linear-gradient(262deg, rgb(94, 114, 235) 0%, rgb(255, 145, 144) 56%, rgb(254, 193, 149) 100%);
+  }
+}
+.hero__textContainer p {
+  font-family: "Crimson Text", serif;
+  font-size: 4rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.hero__imgContainer {
+  width: 70%;
+  justify-self: end;
+  padding-top: 5rem;
+}
+
+/***********************/
+/* About Section */
+/***********************/
+h3 {
+  font-family: "Crimson Text", serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 /***********************/
 /* grid */
 /***********************/
@@ -311,6 +370,18 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.hero__grid {
+  grid-template-columns: repeat(2, 1fr);
+  padding: 4rem 0;
+  gap: 2rem;
+}
+
+.about__grid {
+  grid-template-columns: repeat(2, 1fr);
+  padding: 4rem 0;
+  gap: 2rem;
 }
 
 /***********************/
@@ -330,8 +401,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 2rem;
-  font-size: 1.5rem;
-  font-family: "Open Sans", sans-serif;
+  font-size: 1.2rem;
+  font-family: "Work Sans", sans-serif;
   text-transform: uppercase;
   list-style: none;
 }
