--- a/styles/style.css
+++ b/styles/style.css
@@ -294,7 +294,7 @@ body {
 .wrapper {
   margin-inline: auto;
   max-width: 1200px;
-  width: 70%;
+  width: 80%;
 }
 
 .title {
@@ -320,6 +320,7 @@ body {
   background-image: linear-gradient(90deg, rgb(94, 114, 235) 0%, rgb(255, 145, 144) 56%, rgb(254, 193, 149) 100%);
   color: transparent;
   -webkit-background-clip: text;
+          background-clip: text;
   -webkit-animation: move 4s infinite;
           animation: move 4s infinite;
 }
@@ -354,6 +355,26 @@ h3 {
   font-size: 2.5rem;
   font-weight: 400;
   text-transform: uppercase;
+  padding-bottom: 4rem;
+}
+
+.about__skill .skill__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2.5rem;
+}
+.about__skill .skill__list i {
+  font-size: 3.5rem;
+}
+
+.about__des {
+  font-size: 1.2rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.5rem;
 }
 
 /***********************/
@@ -374,7 +395,7 @@ h3 {
 
 .hero__grid {
   grid-template-columns: repeat(2, 1fr);
-  padding: 4rem 0;
+  padding: 4rem 0 8rem 0;
   gap: 2rem;
 }
 
