--- a/styles/sass/_grid.scss
+++ b/styles/sass/_grid.scss
@@ -23,6 +23,12 @@
 .about__grid {
   grid-template-columns: repeat(2, 1fr);
 
-  padding: 4rem 0;
+  padding: 3rem 0 8rem 0;
   gap: 2rem;
+}
+
+.project__grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 3rem;
 }
