--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -14,6 +14,10 @@ body {
   display: flex;
 }
 
+img {
+  display: block;
+}
+
 .title--style {
   width: 11rem;
   height: 1.4rem;
@@ -59,12 +63,20 @@ body {
     font-weight: $regular;
     text-transform: uppercase;
   }
+
+  .hero__tag {
+    font-family: $main-font;
+    font-size: 1.4rem;
+    font-weight: $regular;
+    text-transform: none;
+    margin-top: 3.5rem;
+  }
 }
 
 .hero__imgContainer {
   width: 70%;
   justify-self: end;
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 
 /***********************/
@@ -79,17 +91,21 @@ h3 {
   padding-bottom: 4rem;
 }
 
-.about__skill {
-  // grid-row: 2;
+h4 {
+  font-family: $body-font;
+  font-weight: $semiBold;
+  font-size: 2.5rem;
+  padding-bottom: 2rem;
+  text-transform: uppercase;
+}
 
-  .skill__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2.5rem;
+.skill__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2.5rem;
 
-    i {
-      font-size: 3.5rem;
-    }
+  i {
+    font-size: 3.5rem;
   }
 }
 
@@ -98,4 +114,49 @@ h3 {
   font-family: $body-font;
   font-weight: $regular;
   line-height: 1.5rem;
+}
+
+/***********************/
+/* Project Section */
+/***********************/
+
+.project--header {
+  margin-bottom: 3rem;
+}
+
+.project__imageContainer {
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.33);
+  margin-bottom: 5rem;
+}
+
+h5 {
+  font-family: $body-font;
+  font-weight: $medium;
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+}
+.tool--list {
+  display: flex;
+  text-transform: uppercase;
+  gap: 2rem;
+
+  li {
+    font-family: $body-font;
+    border: 1px solid $black;
+    padding: 0.4rem;
+  }
+}
+
+.project__text {
+  margin-bottom: 5rem;
+  p {
+    font-size: 1.2rem;
+    font-family: $body-font;
+    font-weight: $regular;
+    line-height: 1.5rem;
+    padding-top: 1rem;
+    line-height: 2rem;
+  }
 }
