--- a/styles/style.css
+++ b/styles/style.css
@@ -303,6 +303,10 @@ body {
   display: flex;
 }
 
+img {
+  display: block;
+}
+
 .title--style {
   width: 11rem;
   height: 1.4rem;
@@ -340,11 +344,18 @@ body {
   font-weight: 400;
   text-transform: uppercase;
 }
+.hero__textContainer .hero__tag {
+  font-family: "Crimson Text", serif;
+  font-size: 1.4rem;
+  font-weight: 400;
+  text-transform: none;
+  margin-top: 3.5rem;
+}
 
 .hero__imgContainer {
   width: 70%;
   justify-self: end;
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 
 /***********************/
@@ -358,7 +369,15 @@ h3 {
   padding-bottom: 4rem;
 }
 
-.about__skill .skill__list {
+h4 {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
+  font-size: 2.5rem;
+  padding-bottom: 2rem;
+  text-transform: uppercase;
+}
+
+.skill__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -366,7 +385,7 @@ h3 {
       flex-wrap: wrap;
   gap: 2.5rem;
 }
-.about__skill .skill__list i {
+.skill__list i {
   font-size: 3.5rem;
 }
 
@@ -375,6 +394,52 @@ h3 {
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
   line-height: 1.5rem;
+}
+
+/***********************/
+/* Project Section */
+/***********************/
+.project--header {
+  margin-bottom: 3rem;
+}
+
+.project__imageContainer {
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.33);
+  margin-bottom: 5rem;
+}
+
+h5 {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 500;
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.tool--list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-transform: uppercase;
+  gap: 2rem;
+}
+.tool--list li {
+  font-family: "Work Sans", sans-serif;
+  border: 1px solid #333333;
+  padding: 0.4rem;
+}
+
+.project__text {
+  margin-bottom: 5rem;
+}
+.project__text p {
+  font-size: 1.2rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.5rem;
+  padding-top: 1rem;
+  line-height: 2rem;
 }
 
 /***********************/
@@ -401,8 +466,14 @@ h3 {
 
 .about__grid {
   grid-template-columns: repeat(2, 1fr);
-  padding: 4rem 0;
+  padding: 3rem 0 8rem 0;
   gap: 2rem;
+}
+
+.project__grid {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 3rem;
 }
 
 /***********************/
