contact section added

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -12,6 +12,7 @@ body {
 
 .title {
   display: flex;
+  gap: 1rem;
 }
 
 img {
@@ -22,6 +23,11 @@ img {
   width: 11rem;
   height: 1.4rem;
   border-bottom: 3.5px solid $yellow;
+}
+
+i {
+  font-size: 3.5rem;
+  color: rgba(51, 51, 51, 0.9);
 }
 
 /***********************/
@@ -65,8 +71,8 @@ img {
   }
 
   .hero__tag {
-    font-family: $main-font;
-    font-size: 1.4rem;
+    font-family: $body-font;
+    font-size: 1.2rem;
     font-weight: $regular;
     text-transform: none;
     margin-top: 3.5rem;
@@ -103,10 +109,6 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   gap: 2.5rem;
-
-  i {
-    font-size: 3.5rem;
-  }
 }
 
 .about__des {
@@ -133,9 +135,9 @@ h4 {
 h5 {
   font-family: $body-font;
   font-weight: $medium;
+  text-transform: uppercase;
   font-size: 2rem;
   padding-bottom: 1rem;
-  text-transform: uppercase;
 }
 .tool--list {
   display: flex;
@@ -154,9 +156,81 @@ h5 {
   p {
     font-size: 1.2rem;
     font-family: $body-font;
-    font-weight: $regular;
+    font-weight: $light;
     line-height: 1.5rem;
     padding-top: 1rem;
     line-height: 2rem;
+  }
+
+  a {
+    display: inline-block;
+    margin-top: 3rem;
+    margin-right: 2rem;
+    font-family: $body-font;
+    font-weight: $medium;
+    text-transform: uppercase;
+    color: $black;
+    font-size: 1.3rem;
+    text-decoration: underline;
+  }
+}
+
+/***********************/
+/* Contact Section */
+/***********************/
+
+.contact--info {
+  font-family: $body-font;
+  font-weight: $medium;
+  text-transform: lowercase;
+  font-size: 2rem;
+  margin-bottom: 4rem;
+}
+
+.contact--header {
+  font-family: $main-font;
+  font-weight: $medium;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  padding-bottom: 1rem;
+}
+
+.contact__socials {
+  display: flex;
+  gap: 2rem;
+}
+
+form {
+  input,
+  textarea {
+    background: transparent;
+    outline: none;
+    border: 0;
+    padding: 1rem 1.25rem;
+    color: $black;
+    width: 100%;
+    font-family: $body-font;
+    border-bottom: 2px solid $black;
+    margin-bottom: 2rem;
+  }
+
+  label {
+    font-family: $body-font;
+  }
+
+  .btn {
+    display: inline-block;
+    font-family: $body-font;
+    font-size: 1rem;
+    padding: 1rem 1.3rem;
+
+    background-color: $black;
+    color: $beige;
+    border-radius: 15px;
+    transition: background-color 0.3s;
+  }
+
+  .btn:hover {
+    background-color: #000000;
   }
 }
