--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,13 +3,15 @@
 $black: #333333;
 $beige: #f7f6f3;
 $white: #fff;
-$yellow: #ffdc8a;
+$yellow: #eebf99;
+// $yellow: #ffdc8a;
 
 // ************FONTS********************
 // ***************************************
 $main-font: 'Crimson Text', serif;
 $body-font: 'Work Sans', sans-serif;
 
+$light: 300;
 $regular: 400;
 $medium: 500;
 $semiBold: 600;
