--- a/styles/sass/_grid.scss
+++ b/styles/sass/_grid.scss
@@ -31,4 +31,10 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 3rem;
+  padding: 3rem 0 8rem 0;
+}
+
+.contact__grid {
+  grid-template-columns: repeat(2, 1fr);
+  padding: 3rem 0 12rem 0;
 }
