--- a/styles/style.css
+++ b/styles/style.css
@@ -392,6 +392,23 @@ h4 {
   gap: 2.5rem;
 }
 
+.list--box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.list--box p {
+  font-family: "Crimson Text", serif;
+  margin-top: 1rem;
+}
+
 .about__des {
   font-size: 1.2rem;
   font-family: "Work Sans", sans-serif;
