--- a/styles/sass/_grid.scss
+++ b/styles/sass/_grid.scss
@@ -18,6 +18,13 @@
 
   padding: 4rem 0 8rem 0;
   gap: 2rem;
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 2rem 0 8rem 0;
+    gap: 1.5rem;
+  }
 }
 
 .about__grid {
@@ -25,6 +32,12 @@
 
   padding: 3rem 0 8rem 0;
   gap: 2rem;
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 4rem;
+  }
 }
 
 .project__grid {
@@ -32,9 +45,19 @@
   grid-template-rows: repeat(3, 1fr);
   gap: 3rem;
   padding: 3rem 0 8rem 0;
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+  }
 }
 
 .contact__grid {
   grid-template-columns: repeat(2, 1fr);
   padding: 3rem 0 12rem 0;
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
