--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -83,6 +83,12 @@ i {
   width: 70%;
   justify-self: end;
   padding-top: 4rem;
+
+  @media (max-width: 1200px) {
+    grid-row: 1/2;
+    justify-self: center;
+    width: 40%;
+  }
 }
 
 /***********************/
@@ -123,10 +129,24 @@ h4 {
 }
 
 .about__des {
-  font-size: 1.2rem;
-  font-family: $body-font;
-  font-weight: $regular;
-  line-height: 1.5rem;
+  p {
+    font-size: 1.2rem;
+    font-family: $body-font;
+    font-weight: $light;
+
+    line-height: 1.5rem;
+  }
+
+  span {
+    display: block;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    color: $black;
+    font-size: 1.4rem;
+    font-family: $body-font;
+    font-weight: $regular;
+    line-height: 1.8rem;
+  }
 }
 
 /***********************/
@@ -141,6 +161,24 @@ h4 {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.33);
   margin-bottom: 5rem;
+
+  @media (max-width: 1200px) {
+    margin-bottom: 1rem;
+    width: 70%;
+    justify-self: center;
+  }
+}
+
+.project__two {
+  @media (max-width: 1200px) {
+    grid-row: 3/-7;
+  }
+}
+
+.project__four {
+  @media (max-width: 1200px) {
+    grid-row: 7/-3;
+  }
 }
 
 h5 {
@@ -184,6 +222,10 @@ h5 {
     font-size: 1.3rem;
     text-decoration: underline;
   }
+
+  @media (max-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 
 /***********************/
@@ -191,11 +233,13 @@ h5 {
 /***********************/
 
 .contact--info {
+  display: inline-block;
   font-family: $body-font;
   font-weight: $medium;
   text-transform: lowercase;
   font-size: 2rem;
   margin-bottom: 4rem;
+  color: $black;
 }
 
 .contact--header {
@@ -206,9 +250,25 @@ h5 {
   padding-bottom: 1rem;
 }
 
+.contact__top {
+  display: inline-block;
+  margin-top: 5rem;
+  font-family: $body-font;
+  font-weight: $semiBold;
+  font-size: 1.5em;
+  color: $black;
+  text-transform: uppercase;
+}
+
 .contact__socials {
   display: flex;
   gap: 2rem;
+}
+
+.contact__form {
+  @media (max-width: 1200px) {
+    grid-row: 1/-3;
+  }
 }
 
 form {
@@ -239,9 +299,26 @@ form {
     color: $beige;
     border-radius: 15px;
     transition: background-color 0.3s;
+
+    @media (max-width: 1200px) {
+      margin-bottom: 4rem;
+    }
   }
 
   .btn:hover {
     background-color: #000000;
   }
+}
+
+/***********************/
+/* Footer Section */
+/***********************/
+.footer__text {
+  text-align: center;
+  padding: 2rem 0;
+
+  font-family: $body-font;
+  font-size: 1.2em;
+  color: $black;
+  text-transform: uppercase;
 }
