--- a/styles/style.css
+++ b/styles/style.css
@@ -363,6 +363,13 @@ i {
   justify-self: end;
   padding-top: 4rem;
 }
+@media (max-width: 1200px) {
+  .hero__imgContainer {
+    grid-row: 1/2;
+    justify-self: center;
+    width: 40%;
+  }
+}
 
 /***********************/
 /* About Section */
@@ -409,11 +416,21 @@ h4 {
   margin-top: 1rem;
 }
 
-.about__des {
+.about__des p {
   font-size: 1.2rem;
   font-family: "Work Sans", sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.5rem;
+}
+.about__des span {
+  display: block;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  color: #333333;
+  font-size: 1.4rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  line-height: 1.8rem;
 }
 
 /***********************/
@@ -427,6 +444,25 @@ h4 {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.33);
   margin-bottom: 5rem;
+}
+@media (max-width: 1200px) {
+  .project__imageContainer {
+    margin-bottom: 1rem;
+    width: 70%;
+    justify-self: center;
+  }
+}
+
+@media (max-width: 1200px) {
+  .project__two {
+    grid-row: 3/-7;
+  }
+}
+
+@media (max-width: 1200px) {
+  .project__four {
+    grid-row: 7/-3;
+  }
 }
 
 h5 {
@@ -472,16 +508,23 @@ h5 {
   font-size: 1.3rem;
   text-decoration: underline;
 }
+@media (max-width: 1200px) {
+  .project__text {
+    margin-bottom: 0;
+  }
+}
 
 /***********************/
 /* Contact Section */
 /***********************/
 .contact--info {
+  display: inline-block;
   font-family: "Work Sans", sans-serif;
   font-weight: 500;
   text-transform: lowercase;
   font-size: 2rem;
   margin-bottom: 4rem;
+  color: #333333;
 }
 
 .contact--header {
@@ -492,11 +535,27 @@ h5 {
   padding-bottom: 1rem;
 }
 
+.contact__top {
+  display: inline-block;
+  margin-top: 5rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.5em;
+  color: #333333;
+  text-transform: uppercase;
+}
+
 .contact__socials {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 2rem;
+}
+
+@media (max-width: 1200px) {
+  .contact__form {
+    grid-row: 1/-3;
+  }
 }
 
 form input,
@@ -525,8 +584,25 @@ form .btn {
   -webkit-transition: background-color 0.3s;
   transition: background-color 0.3s;
 }
+@media (max-width: 1200px) {
+  form .btn {
+    margin-bottom: 4rem;
+  }
+}
 form .btn:hover {
   background-color: #000000;
+}
+
+/***********************/
+/* Footer Section */
+/***********************/
+.footer__text {
+  text-align: center;
+  padding: 2rem 0;
+  font-family: "Work Sans", sans-serif;
+  font-size: 1.2em;
+  color: #333333;
+  text-transform: uppercase;
 }
 
 /***********************/
@@ -550,11 +626,26 @@ form .btn:hover {
   padding: 4rem 0 8rem 0;
   gap: 2rem;
 }
+@media (max-width: 1200px) {
+  .hero__grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 2rem 0 8rem 0;
+    gap: 1.5rem;
+  }
+}
 
 .about__grid {
   grid-template-columns: repeat(2, 1fr);
   padding: 3rem 0 8rem 0;
   gap: 2rem;
+}
+@media (max-width: 1200px) {
+  .about__grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 4rem;
+  }
 }
 
 .project__grid {
@@ -563,10 +654,22 @@ form .btn:hover {
   gap: 3rem;
   padding: 3rem 0 8rem 0;
 }
+@media (max-width: 1200px) {
+  .project__grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+  }
+}
 
 .contact__grid {
   grid-template-columns: repeat(2, 1fr);
   padding: 3rem 0 12rem 0;
+}
+@media (max-width: 1200px) {
+  .contact__grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
 
 /***********************/
