--- a/styles/style.css
+++ b/styles/style.css
@@ -283,12 +283,32 @@ a {
   text-decoration: none;
 }
 
+body {
+  background-color: #f7f6f3;
+}
+
 html {
   font: 62.5%;
 }
-
-body {
-  background-color: #f7f6f3;
+@media (max-width: 1200px) {
+  html {
+    font: 55%;
+  }
+}
+@media (max-width: 1100px) {
+  html {
+    font: 50%;
+  }
+}
+@media (max-width: 750px) {
+  html {
+    font: 45%;
+  }
+}
+@media (max-width: 450px) {
+  html {
+    font: 35%;
+  }
 }
 
 .wrapper {
@@ -302,6 +322,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 1rem;
+}
+@media (max-width: 500px) {
+  .title {
+    gap: 0;
+  }
 }
 
 img {
@@ -334,6 +359,17 @@ i {
   -webkit-animation: move 4s infinite;
           animation: move 4s infinite;
 }
+@media (max-width: 950px) {
+  .hero__textContainer h1 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 500px) {
+  .hero__textContainer h1 {
+    font-size: 2.4rem;
+    text-align: center;
+  }
+}
 @-webkit-keyframes move {
   50% {
     background-image: linear-gradient(262deg, rgb(94, 114, 235) 0%, rgb(255, 145, 144) 56%, rgb(254, 193, 149) 100%);
@@ -350,12 +386,39 @@ i {
   font-weight: 400;
   text-transform: uppercase;
 }
+@media (max-width: 950px) {
+  .hero__textContainer p {
+    font-size: 3.5rem;
+  }
+}
+@media (max-width: 500px) {
+  .hero__textContainer p {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
 .hero__textContainer .hero__tag {
   font-family: "Work Sans", sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
   text-transform: none;
   margin-top: 3.5rem;
+}
+@media (max-width: 800px) {
+  .hero__textContainer .hero__tag {
+    margin-top: 3rem;
+  }
+}
+@media (max-width: 600px) {
+  .hero__textContainer .hero__tag {
+    margin-top: 1.5rem;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .hero__textContainer .hero__tag {
+    text-align: center;
+  }
 }
 
 .hero__imgContainer {
@@ -370,6 +433,23 @@ i {
     width: 40%;
   }
 }
+@media (max-width: 850px) {
+  .hero__imgContainer {
+    width: 50%;
+  }
+}
+@media (max-width: 750px) {
+  .hero__imgContainer {
+    padding-top: 3rem;
+  }
+}
+@media (max-width: 378px) {
+  .hero__imgContainer {
+    -ms-flex-item-align: end;
+        align-self: end;
+    width: 75%;
+  }
+}
 
 /***********************/
 /* About Section */
@@ -380,6 +460,11 @@ h3 {
   font-weight: 400;
   text-transform: uppercase;
   padding-bottom: 4rem;
+}
+@media (max-width: 500px) {
+  h3 {
+    font-size: 2.2rem;
+  }
 }
 
 h4 {
@@ -397,6 +482,13 @@ h4 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 2.5rem;
+}
+@media (max-width: 550px) {
+  .skill__list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .list--box {
@@ -422,15 +514,10 @@ h4 {
   font-weight: 300;
   line-height: 1.5rem;
 }
-.about__des span {
-  display: block;
-  text-transform: uppercase;
-  margin-bottom: 1rem;
-  color: #333333;
-  font-size: 1.4rem;
-  font-family: "Work Sans", sans-serif;
-  font-weight: 400;
-  line-height: 1.8rem;
+@media (max-width: 550px) {
+  .about__des p {
+    text-align: center;
+  }
 }
 
 /***********************/
@@ -442,14 +529,36 @@ h4 {
 
 .project__imageContainer {
   width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.33);
   margin-bottom: 5rem;
+}
+.project__imageContainer img {
+  border: 1px solid rgba(33, 33, 33, 0.33);
 }
 @media (max-width: 1200px) {
   .project__imageContainer {
     margin-bottom: 1rem;
     width: 70%;
     justify-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+}
+@media (max-width: 600px) {
+  .project__imageContainer {
+    width: 80%;
+  }
+}
+@media (max-width: 450px) {
+  .project__imageContainer {
+    width: 90%;
+  }
+}
+@media (max-width: 400px) {
+  .project__imageContainer {
+    -ms-flex-item-align: end;
+        align-self: end;
+    margin-bottom: 4rem;
+    width: 100%;
   }
 }
 
@@ -472,6 +581,16 @@ h5 {
   font-size: 2rem;
   padding-bottom: 1rem;
 }
+@media (max-width: 700px) {
+  h5 {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 550px) {
+  h5 {
+    text-align: center;
+  }
+}
 
 .tool--list {
   display: -webkit-box;
@@ -480,14 +599,43 @@ h5 {
   text-transform: uppercase;
   gap: 2rem;
 }
+@media (max-width: 700px) {
+  .tool--list {
+    gap: 1rem;
+  }
+}
+@media (max-width: 550px) {
+  .tool--list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 .tool--list li {
   font-family: "Work Sans", sans-serif;
   border: 1px solid #333333;
   padding: 0.4rem;
 }
+@media (max-width: 450px) {
+  .tool--list li {
+    font-size: 0.8rem;
+  }
+}
 
 .project__text {
   margin-bottom: 5rem;
+}
+@media (max-width: 1200px) {
+  .project__text {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 550px) {
+  .project__text {
+    margin-bottom: 2rem;
+  }
 }
 .project__text p {
   font-size: 1.2rem;
@@ -497,8 +645,30 @@ h5 {
   padding-top: 1rem;
   line-height: 2rem;
 }
+@media (max-width: 700px) {
+  .project__text p {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 550px) {
+  .project__text p {
+    text-align: center;
+    line-height: 1.5rem;
+  }
+}
+.project__text .project__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (max-width: 550px) {
+  .project__text .project__link {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 .project__text a {
-  display: inline-block;
   margin-top: 3rem;
   margin-right: 2rem;
   font-family: "Work Sans", sans-serif;
@@ -508,9 +678,15 @@ h5 {
   font-size: 1.3rem;
   text-decoration: underline;
 }
-@media (max-width: 1200px) {
-  .project__text {
-    margin-bottom: 0;
+@media (max-width: 700px) {
+  .project__text a {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 550px) {
+  .project__text a {
+    margin-right: 1rem;
+    font-size: 1rem;
   }
 }
 
@@ -525,6 +701,16 @@ h5 {
   font-size: 2rem;
   margin-bottom: 4rem;
   color: #333333;
+}
+@media (max-width: 550px) {
+  .contact--info {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 400px) {
+  .contact--info {
+    font-size: 1.2rem;
+  }
 }
 
 .contact--header {
@@ -634,6 +820,11 @@ form .btn:hover {
     gap: 1.5rem;
   }
 }
+@media (max-width: 378px) {
+  .hero__grid {
+    padding: 0rem 0 8rem 0;
+  }
+}
 
 .about__grid {
   grid-template-columns: repeat(2, 1fr);
@@ -647,6 +838,11 @@ form .btn:hover {
     gap: 4rem;
   }
 }
+@media (max-width: 340px) {
+  .about__grid {
+    gap: 0rem;
+  }
+}
 
 .project__grid {
   grid-template-columns: repeat(2, 1fr);
@@ -658,6 +854,11 @@ form .btn:hover {
   .project__grid {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(8, 1fr);
+  }
+}
+@media (max-width: 550px) {
+  .project__grid {
+    gap: 0;
   }
 }
 
@@ -683,6 +884,11 @@ form .btn:hover {
 .navbar {
   grid-column: -1;
 }
+@media (max-width: 700px) {
+  .navbar {
+    display: none;
+  }
+}
 
 .navbar__list {
   display: -webkit-box;
@@ -697,4 +903,17 @@ form .btn:hover {
 .navbar__list a {
   font-weight: 700;
   color: #333333;
+}
+
+.nav--burger {
+  display: none;
+  font-size: 3rem;
+  padding-top: 10px;
+  cursor: pointer;
+  justify-self: end;
+}
+@media (max-width: 700px) {
+  .nav--burger {
+    display: block;
+  }
 }
