hamburger menu fix

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -3,6 +3,13 @@
 /***********************/
 /* Header Section */
 /***********************/
+header {
+  position: sticky;
+  top: 0;
+  box-shadow: 0px 10px 61px -22px #b6b6b6;
+  background-color: rgba(247, 246, 243, 0.9);
+  z-index: 10;
+}
 
 .header__logo {
   width: 5rem;
@@ -28,6 +35,24 @@
   a {
     font-weight: $bold;
     color: $black;
+    position: relative;
+  }
+
+  a:after {
+    background: transparent;
+    bottom: -5px;
+    content: '';
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: $black;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  a:hover:after {
+    width: 100%;
+    left: 0;
   }
 }
 
@@ -37,8 +62,88 @@
   padding-top: 10px;
   cursor: pointer;
   justify-self: end;
-  // align-self: end;
+
   @media (max-width: 700px) {
     display: block;
   }
+
+  .bar {
+    display: block;
+    width: 35px;
+    height: 4px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background-color: $black;
+  }
+}
+
+.navbar__hamburger {
+  display: none;
+  gap: 2rem;
+  font-size: 1.2rem;
+  font-family: $body-font;
+  color: $black;
+
+  @media (max-width: 700px) {
+    font-size: 3rem;
+    display: flex;
+    position: fixed;
+    right: -100%;
+    top: 105px;
+    gap: 2rem;
+    flex-direction: column;
+    background-color: $beige;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    height: 100vh;
+
+    transition: 0.5s;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 2rem;
+  }
+
+  a {
+    font-weight: $bold;
+    color: $black;
+    position: relative;
+  }
+
+  a:after {
+    background: transparent;
+    bottom: -5px;
+    content: '';
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: $black;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+  a:hover:after {
+    width: 100%;
+    left: 0;
+  }
+}
+
+.navbar__list--active {
+  @media (max-width: 700px) {
+    right: 0;
+  }
+}
+
+.nav--burger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+.nav--burger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+.nav--burger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
 }
