--- a/styles/style.css
+++ b/styles/style.css
@@ -520,6 +520,21 @@ h4 {
   }
 }
 
+.about__resume {
+  font-family: "Work Sans", sans-serif;
+  font-weight: 500;
+  color: #333333;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+@media (max-width: 550px) {
+  .about__resume {
+    display: block;
+    text-align: center;
+  }
+}
+
 /***********************/
 /* Project Section */
 /***********************/
