--- a/styles/sass/_grid.scss
+++ b/styles/sass/_grid.scss
@@ -53,6 +53,7 @@
   grid-template-rows: repeat(3, 1fr);
   gap: 3rem;
   padding: 3rem 0 8rem 0;
+  align-items: center;
 
   @media (max-width: 1200px) {
     grid-template-columns: 1fr;
