--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -441,6 +441,12 @@ form {
     font-family: $body-font;
     border-bottom: 2px solid $black;
     margin-bottom: 2rem;
+
+    &:focus {
+      border-bottom: 2px solid $black;
+      outline: none;
+      box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.1);
+    }
   }
 
   label {
