--- a/styles/sass/_grid.scss
+++ b/styles/sass/_grid.scss
@@ -50,9 +50,9 @@
 
 .project__grid {
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+
   gap: 3rem;
-  padding: 3rem 0 8rem 0;
+  padding: 0 0 4rem 0;
   align-items: center;
 
   @media (max-width: 1200px) {
