--- a/styles/style.css
+++ b/styles/style.css
@@ -878,9 +878,16 @@ form .btn:hover {
     grid-template-rows: repeat(8, 1fr);
   }
 }
-@media (max-width: 550px) {
+@media (max-width: 800px) {
   .project__grid {
     gap: 0;
+    grid-template-rows: 0.75fr 1fr 0.75fr 1fr 0.75fr 1fr 0.75fr 0.9fr;
+  }
+}
+@media (max-width: 600px) {
+  .project__grid {
+    gap: 0;
+    grid-template-rows: 0.5fr 1fr 0.5fr 1fr 0.5fr 1fr 0.5fr 0.9fr;
   }
 }
 
