--- a/styles/style.css
+++ b/styles/style.css
@@ -905,6 +905,11 @@ form .btn:hover {
     grid-template-rows: repeat(2, 1fr);
   }
 }
+@media (max-width: 600px) {
+  .contact__grid {
+    padding: 3rem 0 3rem 0;
+  }
+}
 
 /***********************/
 /* Header Section */
