--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -3,7 +3,7 @@
 $black: #333333;
 $beige: #f7f6f3;
 $white: #fff;
-$yellow: #eebf99;
+$yellow: #f08f3f;
 // $yellow: #ffdc8a;
 
 // ************FONTS********************
