--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -36,6 +36,8 @@ html {
 .title {
   display: flex;
   gap: 1rem;
+  align-items: center;
+  margin-bottom: 2rem;
 
   @media (max-width: 500px) {
     gap: 0;
@@ -50,6 +52,7 @@ img {
   width: 11rem;
   height: 1.4rem;
   border-bottom: 3.5px solid $yellow;
+  margin-bottom: 10px;
 }
 
 i {
@@ -163,12 +166,12 @@ i {
 /* About Section */
 /***********************/
 
-h3 {
+.title--text {
   font-family: $main-font;
-  font-size: 2.5rem;
-  font-weight: $regular;
-  text-transform: uppercase;
-  padding-bottom: 4rem;
+  font-size: 3rem;
+  font-weight: $semiBold;
+  // text-transform: uppercase;
+  // padding-bottom: 4rem;
 
   @media (max-width: 500px) {
     font-size: 2.2rem;
@@ -208,13 +211,25 @@ h4 {
   p {
     font-size: 1.2rem;
     font-family: $body-font;
-    font-weight: $light;
+    font-weight: $regular;
 
     line-height: 1.5rem;
 
     @media (max-width: 550px) {
       text-align: center;
     }
+  }
+}
+
+.about__const {
+  text-transform: lowercase;
+  font-family: $body-font;
+  font-weight: $medium;
+  font-size: 2.5rem;
+  padding-bottom: 2rem;
+
+  em {
+    color: $yellow;
   }
 }
 
@@ -225,6 +240,7 @@ h4 {
   font-size: 1.2rem;
   text-transform: uppercase;
   text-decoration: underline;
+  color: $yellow;
 
   @media (max-width: 550px) {
     display: block;
@@ -285,6 +301,7 @@ h5 {
   text-transform: uppercase;
   font-size: 2rem;
   padding-bottom: 1rem;
+  color: $yellow;
 
   @media (max-width: 700px) {
     font-size: 1.7rem;
