--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -6,7 +6,7 @@
 header {
   position: sticky;
   top: 0;
-  box-shadow: 0px 10px 61px -22px #b6b6b6;
+  box-shadow: 0px 10px 61px -22px #dbd8d8;
   background-color: rgba(247, 246, 243, 0.9);
   z-index: 10;
 }
